# auto-fio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/auto_fio/: __init__.py  __main__.py  backends.py  cli.py  hints.py  knee.py  profiler.py
tests/: test_cli.py  test_hints.py  test_knee.py  test_profiler.py
