[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-fio"
version = "0.1.0"
description = "Automated Flexible I/O tester — profile storage and recommend an optimal I/O block size."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Anthony L. Celeres" }]
keywords = [
    "io", "benchmark", "fio", "block-size", "storage",
    "throughput", "data-loading", "autotune",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Benchmark",
    "Topic :: System :: Filesystems",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.3"]

[project.scripts]
auto-fio = "auto_fio.cli:main"

[project.urls]
Homepage = "https://github.com/anthony-celeres/auto-fio"
Repository = "https://github.com/anthony-celeres/auto-fio"
Issues = "https://github.com/anthony-celeres/auto-fio/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_fio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
